# LinkedinJobScraper

./: .replit  currilo_pjm_readme  cv_backup_original.txt  cv_changes.diff  cv_novo.txt  first_result_template.html  gemini_analyzer.py  index_updated.html  linkedin_login.py  linkedin_sample.html  linkedin_scraper.py  main.py  models.py  new_prompt.txt  pyproject.toml  replit.md  replit.nix
attached_assets/: Pasted--Install-an-additional-SDK-for-JSON-schema-support-Google-AI-Python-SDK-pip-install-google--1745078749103.txt  Pasted--Install-an-additional-SDK-for-JSON-schema-support-Google-AI-Python-SDK-pip-install-google--1745199627268.txt  Pasted--Install-an-additional-SDK-for-JSON-schema-support-Google-AI-Python-SDK-pip-install-google--1745203632938.txt  Pasted--Install-an-additional-SDK-for-JSON-schema-support-Google-AI-Python-SDK-pip-install-google-ai--1745028009064.txt  Pasted--Install-an-additional-SDK-for-JSON-schema-support-Google-AI-Python-SDK-pip-install-google-ai--1745029526836.txt  Pasted--Install-an-additional-SDK-for-JSON-schema-support-Google-AI-Python-SDK-pip-install-google-ai--1745030407247.txt  Pasted--To-run-this-code-you-need-to-install-the-following-dependencies-pip-install-google-genai-im-1745936849520.txt  Pasted--To-run-this-code-you-need-to-install-the-following-dependencies-pip-install-google-genai-im-1745940154248.txt  Pasted--To-run-this-code-you-need-to-install-the-following-dependencies-pip-install-google-genai-im-1745984940481.txt  Pasted--div-class-job-view-layout-jobs-details-div-div-class-mt4--1743662330594.txt  (+15 more)
templates/: 404.html  (+7 more)
(+3 files in other folders)
