[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "email-validator>=2.2.0",
    "flask>=3.1.0",
    "flask-sqlalchemy>=3.1.1",
    "google-genai>=1.9.0",
    "google-generativeai>=0.8.4",
    "gunicorn>=23.0.0",
    "lxml>=5.3.1",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "psycopg2-binary>=2.9.10",
    "requests-html>=0.10.0",
    "requests[socks]>=2.32.3",
    "selenium>=4.30.0",
    "sift-stack-py>=0.5.0",
    "stem>=1.8.2",
    "trafilatura>=2.0.0",
]
